--- a/android/Lexithymia/app/src/main/res/layout/chat_example.xml
+++ b/android/Lexithymia/app/src/main/res/layout/chat_example.xml
@@ -2,16 +2,32 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <!--<Spinner-->
+        <!--android:id="@+id/spinner1"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:entries="@array/feelings"-->
+        <!--android:prompt="@string/action_favorite" />-->
+    <!---->
+    <!--<Spinner-->
+        <!--android:id="@+id/spinner2"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:entries="@array/friends"-->
+    <!--android:prompt="@string/action_settings" />-->
 
     <LinearLayout
         android:id="@+id/l4"
         android:layout_width="match_parent"
-        android:layout_height="85dp"
+        android:layout_height="110dp"
         android:layout_below="@+id/l2"
         android:layout_weight="1"
         android:orientation="horizontal"
         android:paddingTop="3dp"
+        android:visibility="gone"
         tools:ignore="NotSibling">
 
         <LinearLayout
@@ -26,7 +42,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#FFF"
-                android:text="MODIFIERS"
+                android:text="PHYSICAL"
                 android:textAlignment="center"
                 android:textColor="#aaf"
                 android:textSize="8sp" />
@@ -83,7 +99,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#FFF"
-                android:text=".."
+                android:text="PSYCHO"
                 android:textAlignment="center"
                 android:textColor="#aaf"
                 android:textSize="8sp" />
@@ -122,12 +138,26 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
                 android:background="@drawable/my_togglebutton"
-                android:contentDescription="EXTRA.none"
+                android:contentDescription="EXTRA.Stress"
                 android:hint="in your body"
                 android:minHeight="20dp"
                 android:text="ToggleButton"
-                android:textOff="-"
-                android:textOn="-"
+                android:textOff="Stress"
+                android:textOn="Stressed out"
+                android:textSize="12sp" />
+
+            <ToggleButton
+                android:id="@+id/tbe10"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:background="@drawable/my_togglebutton"
+                android:contentDescription="EXTRA.Irritated"
+                android:hint="in your body"
+                android:minHeight="20dp"
+                android:text="ToggleButton"
+                android:textOff="Irritated"
+                android:textOn="Irritated"
                 android:textSize="12sp" />
         </LinearLayout>
 
@@ -143,7 +173,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#FFF"
-                android:text=".."
+                android:text="BASIC NEEDS"
                 android:textAlignment="center"
                 android:textColor="#aaf"
                 android:textSize="8sp" />
@@ -209,23 +239,147 @@
             android:layout_weight="1"
             android:background="@android:color/transparent"
             android:ems="10"
-            android:hint="Describe your emotions here,\nor choose some from below..."
+            android:hint="  Describe your emotions here,\nor choose some from below..."
             android:inputType="textMultiLine"
             android:lines="2"
             android:minHeight="60dp"
+            android:paddingLeft="5dp"
             android:singleLine="false" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/l2"
         android:layout_width="match_parent"
-        android:layout_height="280dp"
+        android:layout_height="match_parent"
         android:layout_below="@+id/l1"
-        android:layout_marginLeft="2dp"
-        android:orientation="horizontal"
+        android:layout_marginLeft="1dp"
+        android:orientation="vertical"
         android:paddingLeft="3dp"
         android:paddingTop="3dp"
         tools:ignore="NotSibling">
+
+        <RelativeLayout
+            android:id="@+id/lo_plutchik"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:id="@+id/lo_plutchik_controls"
+                android:layout_width="370dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:layout_below="@+id/lo_plutchik_status"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textViewYbg"
+                        android:layout_width="match_parent"
+                        android:layout_height="20dp"
+                        android:text="TextView" />
+
+                    <TextView
+                        android:id="@+id/textViewXbg"
+                        android:layout_width="match_parent"
+                        android:layout_height="20dp"
+                        android:text="TextView" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/lv1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <ToggleButton
+                        android:id="@+id/tbColor"
+                        android:layout_width="match_parent"
+                        android:layout_height="20dp"
+                        android:background="@drawable/my_togglebutton"
+                        android:text="ToggleButton"
+                        android:textOff="not picked"
+                        android:textOn="chosen"
+                        android:textSize="12sp" />
+
+                    <ToggleButton
+                        android:id="@+id/tbColor2"
+                        android:layout_width="match_parent"
+                        android:layout_height="20dp"
+                        android:background="@drawable/my_togglebutton"
+                        android:text="ToggleButton"
+                        android:textOff="not picked"
+                        android:textOn="chosen"
+                        android:textSize="12sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textViewX"
+                        android:layout_width="match_parent"
+                        android:layout_height="20dp"
+                        android:text="TextView" />
+
+                    <TextView
+                        android:id="@+id/textViewY"
+                        android:layout_width="match_parent"
+                        android:layout_height="20dp"
+                        android:text="TextView" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/lo_plutchik_image"
+                android:layout_width="370dp"
+                android:layout_height="370dp"
+
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                tools:ignore="NotSibling">
+
+                <ImageView
+                    android:id="@+id/plutchik"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:adjustViewBounds="false"
+                    android:cropToPadding="false"
+                    android:scaleType="fitXY"
+                    app:srcCompat="@drawable/plutchik_my_v6" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/lo_plutchik_status"
+                android:layout_width="370dp"
+                android:layout_height="10dp"
+                android:layout_weight="1"
+                android:layout_below="@+id/lo_plutchik_image"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="TextView" />
+            </LinearLayout>
+
+        </RelativeLayout>
+
+
 
         <LinearLayout
             android:id="@+id/l2v1"
@@ -233,6 +387,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="top|left|center_horizontal"
             android:orientation="vertical"
+            android:visibility="gone"
             tools:ignore="NotSibling">
 
             <ToggleButton
@@ -325,6 +480,7 @@
             android:layout_gravity="top|left|center_horizontal"
             android:gravity="top"
             android:orientation="vertical"
+            android:visibility="gone"
             tools:ignore="NotSibling">
 
             <ToggleButton
@@ -350,8 +506,8 @@
                 android:contentDescription="PERMA_OPP.D"
                 android:minHeight="45dp"
                 android:text="ToggleButton"
-                android:textOff="Detached"
-                android:textOn="Detached"
+                android:textOff="Bored"
+                android:textOn="Bored"
                 android:textSize="12sp" />
 
             <ToggleButton
@@ -412,6 +568,7 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="5dp"
             android:orientation="vertical"
+            android:visibility="gone"
             tools:ignore="NotSibling">
 
             <ToggleButton
@@ -567,6 +724,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="0dp"
             android:orientation="vertical"
+            android:visibility="gone"
             tools:ignore="NotSibling">
 
             <TextView
@@ -683,11 +841,12 @@
     <LinearLayout
         android:id="@+id/l3"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="100dp"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="370dp"
         android:layout_below="@+id/l1"
-        android:orientation="vertical">
+        android:layout_marginTop="385dp"
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <ListView
             android:id="@+id/messageList"
