--- a/android/Lexithymia/app/src/main/res/layout/chat_example.xml
+++ b/android/Lexithymia/app/src/main/res/layout/chat_example.xml
@@ -263,39 +263,50 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <LinearLayout
-                android:id="@+id/lo_plutchik_controls"
-                android:layout_width="370dp"
-                android:layout_height="40dp"
-                android:layout_weight="1"
-                android:layout_below="@+id/lo_plutchik_status"
-                android:orientation="horizontal">
+            <RelativeLayout
+                android:id="@+id/lo_plutchik_control"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/lo_plutchik_image">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
+                    android:id="@+id/lo_plutchik_status2"
+                    android:layout_width="120dp"
+                    android:layout_height="match_parent"
+                    android:layout_toRightOf="@+id/lo_plutchik_status"
+                    android:orientation="vertical"
+                    android:paddingLeft="3dp"
+                    android:paddingTop="3dp"></LinearLayout>
 
-                    <TextView
-                        android:id="@+id/textViewYbg"
-                        android:layout_width="match_parent"
-                        android:layout_height="20dp"
-                        android:text="TextView" />
+                <LinearLayout
+                    android:id="@+id/lo_plutchik_status"
+                    android:layout_width="120dp"
+                    android:layout_height="match_parent"
+                    android:layout_toRightOf="@+id/lo_plutchik_dbg"
+                    android:orientation="vertical"
+                    android:paddingLeft="3dp"
+                    android:paddingTop="3dp">
 
-                    <TextView
-                        android:id="@+id/textViewXbg"
-                        android:layout_width="match_parent"
-                        android:layout_height="20dp"
-                        android:text="TextView" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/lv1"
-                    android:layout_width="match_parent"
+                    android:id="@+id/lo_plutchik_dbg"
+                    android:layout_width="90dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textViewY"
+                        android:layout_width="match_parent"
+                        android:layout_height="20dp"
+                        android:text="TextView" />
+
+                    <TextView
+                        android:id="@+id/textViewX"
+                        android:layout_width="match_parent"
+                        android:layout_height="20dp"
+                        android:text="TextView" />
 
                     <ToggleButton
                         android:id="@+id/tbColor"
@@ -316,35 +327,27 @@
                         android:textOff="not picked"
                         android:textOn="chosen"
                         android:textSize="12sp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/textViewX"
+                        android:id="@+id/textViewYbg"
                         android:layout_width="match_parent"
                         android:layout_height="20dp"
                         android:text="TextView" />
 
                     <TextView
-                        android:id="@+id/textViewY"
+                        android:id="@+id/textViewXbg"
                         android:layout_width="match_parent"
                         android:layout_height="20dp"
                         android:text="TextView" />
-
                 </LinearLayout>
-
-            </LinearLayout>
+            </RelativeLayout>
 
             <LinearLayout
                 android:id="@+id/lo_plutchik_image"
-                android:layout_width="370dp"
-                android:layout_height="370dp"
+                android:layout_width="340dp"
+                android:layout_height="340dp"
 
+                android:layout_marginLeft="20dp"
                 android:layout_weight="1"
                 android:orientation="horizontal"
                 tools:ignore="NotSibling">
@@ -353,28 +356,15 @@
                     android:id="@+id/plutchik"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical|center_horizontal|center"
+                    android:layout_marginLeft="0dp"
+                    android:layout_marginRight="0dp"
                     android:layout_weight="1"
                     android:adjustViewBounds="false"
                     android:cropToPadding="false"
                     android:scaleType="fitXY"
                     app:srcCompat="@drawable/plutchik_my_v6" />
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/lo_plutchik_status"
-                android:layout_width="370dp"
-                android:layout_height="10dp"
-                android:layout_weight="1"
-                android:layout_below="@+id/lo_plutchik_image"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="TextView" />
             </LinearLayout>
 
         </RelativeLayout>
