--- a/android/Lexithymia/app/src/main/res/layout/chat_example.xml
+++ b/android/Lexithymia/app/src/main/res/layout/chat_example.xml
@@ -258,6 +258,22 @@
         android:paddingTop="3dp"
         tools:ignore="NotSibling">
 
+        <LinearLayout
+            android:id="@+id/lo_emolist"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/l1"
+            android:layout_marginTop="385dp"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <ListView
+                android:id="@+id/messageList"
+                android:layout_width="365dp"
+                android:layout_height="150dp" />
+        </LinearLayout>
+
         <RelativeLayout
             android:id="@+id/lo_plutchik"
             android:layout_width="match_parent"
@@ -270,22 +286,81 @@
                 android:layout_below="@+id/lo_plutchik_image">
 
                 <LinearLayout
+                    android:id="@+id/lo_plutchik_e1"
+                    android:layout_width="170dp"
+                    android:layout_height="20dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="1dp"
+                    android:layout_weight="1"
+                    android:gravity="right|end"
+                    android:orientation="vertical">
+
+                    <ToggleButton
+                        android:id="@+id/tbColor"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:background="@drawable/my_togglebutton"
+                        android:padding="0dp"
+                        android:paddingBottom="0dp"
+                        android:paddingEnd="0dp"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="0dp"
+                        android:paddingStart="0dp"
+                        android:text="ToggleButton"
+                        android:textOff="not picked"
+                        android:textOn="chosen"
+                        android:textSize="12sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/lo_plutchik_e2"
+                    android:layout_width="170dp"
+                    android:layout_height="20dp"
+                    android:layout_toEndOf="@+id/lo_plutchik_e1"
+                    android:layout_weight="1"
+                    android:gravity="left|start"
+                    android:orientation="vertical">
+
+                    <ToggleButton
+                        android:id="@+id/tbColor2"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="1dp"
+                        android:layout_marginRight="20dp"
+                        android:background="@drawable/my_togglebutton"
+                        android:paddingRight="20dp"
+                        android:text="ToggleButton"
+                        android:textOff="not picked"
+                        android:textOn="chosen"
+                        android:textSize="12sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:id="@+id/lo_plutchik_status2"
-                    android:layout_width="150dp"
+                    android:layout_width="170dp"
                     android:layout_height="match_parent"
+                    android:layout_below="@+id/lo_plutchik_e2"
                     android:layout_toRightOf="@+id/lo_plutchik_status"
                     android:orientation="vertical"
-                    android:paddingLeft="3dp"
-                    android:paddingTop="3dp"></LinearLayout>
+                    android:paddingLeft="5dp"
+                    android:paddingRight="1dp"
+                    android:paddingTop="1dp"></LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/lo_plutchik_status"
-                    android:layout_width="150dp"
+                    android:layout_width="170dp"
                     android:layout_height="match_parent"
-                    android:layout_toRightOf="@+id/lo_plutchik_dbg"
+                    android:layout_below="@+id/lo_plutchik_e1"
+                    android:layout_marginLeft="10dp"
+                    android:foregroundGravity="right"
+                    android:gravity="right|end"
                     android:orientation="vertical"
-                    android:paddingLeft="3dp"
-                    android:paddingTop="3dp">
+                    android:paddingLeft="1dp"
+                    android:paddingRight="5dp"
+                    android:paddingTop="1dp">
 
                 </LinearLayout>
 
@@ -293,8 +368,11 @@
                     android:id="@+id/lo_plutchik_dbg"
                     android:layout_width="90dp"
                     android:layout_height="wrap_content"
+                    android:layout_toEndOf="@+id/lo_plutchik_e1"
+                    android:layout_toRightOf="@+id/lo_plutchik_e1"
                     android:layout_weight="1"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:visibility="gone">
 
                     <TextView
                         android:id="@+id/textViewY"
@@ -309,7 +387,7 @@
                         android:text="TextView" />
 
                     <ToggleButton
-                        android:id="@+id/tbColor"
+                        android:id="@+id/tbColor1old"
                         android:layout_width="match_parent"
                         android:layout_height="20dp"
                         android:background="@drawable/my_togglebutton"
@@ -319,7 +397,7 @@
                         android:textSize="12sp" />
 
                     <ToggleButton
-                        android:id="@+id/tbColor2"
+                        android:id="@+id/tbColor2old"
                         android:layout_width="match_parent"
                         android:layout_height="20dp"
                         android:background="@drawable/my_togglebutton"
@@ -347,6 +425,7 @@
                 android:layout_width="340dp"
                 android:layout_height="340dp"
 
+                android:layout_marginBottom="3dp"
                 android:layout_marginLeft="10dp"
                 android:layout_weight="1"
                 android:orientation="horizontal"
@@ -826,22 +905,6 @@
                 android:textSize="10sp" />
         </LinearLayout>
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/l3"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/l1"
-        android:layout_marginTop="385dp"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <ListView
-            android:id="@+id/messageList"
-            android:layout_width="365dp"
-            android:layout_height="150dp" />
     </LinearLayout>
 
 </RelativeLayout>
