Adjust size of 'add' button

--- a/android/Lexithymia/app/src/main/res/layout/chat_example.xml
+++ b/android/Lexithymia/app/src/main/res/layout/chat_example.xml
@@ -28,9 +28,10 @@
         <Button
             android:id="@+id/bSend"
             android:layout_width="10dp"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_weight="1"
-            android:text="Add" />
+            android:text="+"
+            android:textSize="12sp" />
 
         <EditText
             android:id="@+id/messageText"
